--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Hafsa Sajid",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
